@@ -2892,22 +2892,26 @@ class EfrontCourse
    }
   }
   if ($roleBasicType == 'professor') {
-   $courseString .= '<span class = "courseActions">&nbsp;('._COURSEACTIONS.':</span>
+   if (!isset($GLOBALS['currentUser'] -> coreAccess['course_settings']) || $GLOBALS['currentUser'] -> coreAccess['course_settings'] != 'hidden') {
+    $courseString .= '<span class = "courseActions">&nbsp;('._COURSEACTIONS.':</span>
                                                 <a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_info" >
                                                     <img src = "images/16x16/information.png" title = "'._COURSEINFORMATION.'" alt = "'._COURSEINFORMATION.'" class = "handle"></a>';
-   $courseString .= '<a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_certificates">
+    $courseString .= '<a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_certificates">
                                                     <img src = "images/16x16/autocomplete.png" title = "'._COMPLETION.'" alt = "'._COMPLETION.'" class = "handle"></a>';
-   $courseString .= '<a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_rules">
+    $courseString .= '<a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_rules">
                                                     <img src = "images/16x16/rules.png" title = "'._COURSERULES.'" alt = "'._COURSERULES.'" class = "handle"></a>
                                                 <a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_order">
                                                     <img src = "images/16x16/order.png" title = "'._COURSEORDER.'" alt = "'._COURSEORDER.'" class = "handle"></a>
                                                 <a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=course_scheduling">
-                                                    <img src = "images/16x16/calendar.png" title = "'._COURSESCHEDULE.'" alt = "'._COURSESCHEDULE.'" class = "handle"></a>
-                                                <a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=export_course">
-                                                    <img src = "images/16x16/export.png" title = "'._EXPORTCOURSE.'" alt = "'._EXPORTCOURSE.'" class = "handle"></a>
-                                                <a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=import_course">
-                                                    <img src = "images/16x16/import.png" title = "'._IMPORTCOURSE.'" alt = "'._IMPORTCOURSE.'" class = "handle"></a>
-                                                <span>)</span>';
+                                                    <img src = "images/16x16/calendar.png" title = "'._COURSESCHEDULE.'" alt = "'._COURSESCHEDULE.'" class = "handle"></a>';   
+    if (!isset($GLOBALS['currentUser'] -> coreAccess['course_settings']) || $GLOBALS['currentUser'] -> coreAccess['course_settings'] == 'change') {
+     $courseString .= '<a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=export_course">
+             <img src = "images/16x16/export.png" title = "'._EXPORTCOURSE.'" alt = "'._EXPORTCOURSE.'" class = "handle"></a>
+             <a href = "professor.php?ctg=lessons&course='.$this -> course['id'].'&op=import_course">
+                                                    <img src = "images/16x16/import.png" title = "'._IMPORTCOURSE.'" alt = "'._IMPORTCOURSE.'" class = "handle"></a>';
+                }
+    $courseString .= '<span>)</span>';
+   }
   } else {
    if ($this -> course['completed']) {
     $courseString .= '<span class = "courseActions">&nbsp;</span>
