@@ -3778,4 +3778,5 @@ define("_SOMEFILESARENOTWRITABLEVISITMAINTENANCECLEANUPPERMISSIONS", "Μερικ
 define("_OTHERWISEPLEASEREGISTER", "Εναλλακτικά, μπορείτε να δημιουργήσετε ένα <button onclick = \"location='index.php?ctg=signup'\">νέο λογαριασμό</button>");
 define("_FREELESSONSANDCOURSESWHEREASSIGNEDPLEASEREVIEWNONFREE", "Εγγραφήκατε στα δωρεάν μαθήματα και δέσμες. Παρακαλούμε επιβεβαιώστε την επιλογή σας για τα μαθήματα και δέσμες που δεν είναι δωρεάν");
 define("_SUPERVISORS", "Προϊστάμενοι");
+define("_COURSEOPTIONS","Επιλογές δέσμης");
 ?>
